# extron

./: Cargo.toml  INSTALL.md  README.md  install.ps1  install.sh  makefile
.github/workflows/: release.yml
examples/: array.ext  fib.ext  input.ext  loop.ext  math.ext  string.ext
site/: README.md  package-lock.json  package.json  tsconfig.json  vocs.config.ts  vocs.config.tsx
site/docs/pages/: blank.mdx  index.mdx
site/docs/pages/docs/: index.mdx  start-coding.mdx
site/docs/pages/docs/concepts/: Keywords.mdx  Operators.mdx  Syntax.mdx  data-type.mdx
site/docs/pages/docs/std-lib/: array.mdx  fs.mdx  index.mdx  math.mdx  string.mdx  util.mdx
src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  token.rs
src/eval/: lib.rs  mod.rs  object.rs  print.rs  store.rs
src/std_lib/: array.rs  fs.rs  math.rs  mod.rs  string.rs  util.rs
wasm-bin/: extron.js  extron.wasm
