[package]
name = "extron"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["blocking","json"] }

[[bin]]
name = "extron"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
structopt = "0.3.23"
chrono = "0.4.19"
chrono-tz = "0.6.0"