[package]
name = "extron"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["blocking","json"] }

[[bin]]
name = "extron"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
